Pathwaymatcher: updates README.rst info related to Java.